# kamichain

./: Cargo.toml  IMPLEMENTING.md  LICENSE  README.md  RUNNING.md  justfile
.github/workflows/: ci.yml
docs/: architecture.md  protocol.md
kamichain-cli/: Cargo.toml  README.md
kamichain-cli/src/: CLI_EXPLAINED.md  main.rs  rpc.rs
kamichain-cli/src/commands/: chain.rs  mod.rs  node.rs  tx.rs  wallet.rs
kamichain-core/: Cargo.toml  README.md
kamichain-core/benches/: chain_bench.rs
kamichain-core/src/: BLOCKCHAIN_MATH.md  POW_EXPLAINED.md  block.rs  chain.rs  error.rs  lib.rs  merkle.rs  pow.rs  transaction.rs
kamichain-core/tests/: block_tests.rs  chain_tests.rs  merkle_tests.rs  pow_tests.rs  transaction_tests.rs
kamichain-node/: Cargo.toml  README.md
kamichain-node/src/: MINER_EXPLAINED.md  NODE_EXPLAINED.md  P2P_EXPLAINED.md  RPC_EXPLAINED.md  STATE_EXPLAINED.md  config.rs  error.rs  lib.rs  main.rs  mempool.rs  miner.rs  p2p.rs  rpc.rs  state.rs  storage.rs
kamichain-node/tests/: e2e_tests.rs  mempool_tests.rs  miner_tests.rs  p2p_tests.rs  rpc_tests.rs  state_tests.rs  storage_tests.rs
kamichain-wallet/: Cargo.toml  README.md
kamichain-wallet/src/: WALLET_EXPLAINED.md  error.rs  wallet.rs
kamichain-wallet/tests/: wallet_tests.rs
