[package]
name             = "kamichain-cli"
version.workspace  = true
edition.workspace  = true
authors.workspace  = true
license.workspace  = true

[[bin]]
name = "kami"
path = "src/main.rs"

[dependencies]
kamichain-core   = { path = "../kamichain-core" }
kamichain-wallet = { path = "../kamichain-wallet" }
kamichain-node   = { path = "../kamichain-node" }
serde_json.workspace = true
clap.workspace       = true
anyhow.workspace     = true
tokio.workspace      = true
