[package]
name    = "kamichain-node"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "kamichain_node"
path = "src/lib.rs"

[[bin]]
name = "kamichain-node"
path = "src/bin/node.rs"

[dependencies]
kamichain-core   = { path = "../kamichain-core" }
kamichain-wallet = { path = "../kamichain-wallet" }
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
thiserror.workspace  = true
anyhow.workspace     = true
rayon.workspace      = true
